chore: Fix MANA symbol alignment

--- a/src/components/ClaimENSPage/ClaimENSPage.css
+++ b/src/components/ClaimENSPage/ClaimENSPage.css
@@ -50,7 +50,10 @@
 
 .ClaimENSPage .content .dcl.mana {
   font-size: 14px;
-  transform: translateY(0.1em);
+}
+
+.ClaimENSPage .content .dcl.mana .symbol {
+  transform: translateY(-0.1em);
 }
 
 .ClaimENSPage .ui.button.primary:not(.loading) .dcl.mana .symbol {
@@ -58,4 +61,5 @@
   color: var(--text);
   padding-right: 0.1em;
   padding-left: 0.2em;
+  transform: translateY(-0.03em);
 }
